fix overlapping media query breakpoints

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ h1:nth-child(1) {
   margin-top: 0;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 601px) {
   .mobile-title {
     display: none;
   }
@@ -184,7 +184,7 @@ details > :not(summary) {
   width: 100%;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 601px) {
   .sidebar {
     max-width: 15rem;
   }
